# compare_python_processing

./: CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/commit_checker/: SKILL.md
benchmark/: runner.py
benchmark/implementations/: numba_impl.py  numpy_impl.py  pure_python.py
configs/: .config.yaml.swp  config.yaml
rust_ext/: Cargo.toml  pyproject.toml
rust_ext/src/: lib.rs
tests/: conftest.py  test_implementations.py  test_interface.py  test_runner.py
